# GDA2025

./: .gitignore  ANIME_DOWNLOADER_SPEC.md  ANIME_SELECTOR_SPEC.md  Cargo.toml  DISK_SPACE_MANAGEMENT.md  MAL_SCRAPER_REVIEW.md  MAL_SCRAPER_SPEC.md  PLAN.md  README.md  SETUP.md  TECHNICAL_DETAILS.md  TRANSCRIBER_SPEC.md  UNDECIDED_DETAILS.md  config.example.toml  config.toml  fix_failed_anime.sh  proposal.md
crates/anime-downloader/: Cargo.toml
crates/anime-downloader/src/: downloader.rs  main.rs
crates/anime-selector/: Cargo.toml
crates/anime-selector/src/: main.rs
crates/mal-scraper/: Cargo.toml
crates/mal-scraper/src/: cache.rs  discovery.rs  lib.rs  main.rs  scraper.rs
crates/mal-scraper/src/api/: client.rs  mod.rs  rate_limiter.rs  types.rs
crates/shared/: Cargo.toml  schema.sql
crates/shared/src/: config.rs  db.rs  disk_monitor.rs  lib.rs  logging.rs  models.rs  paths.rs  queue.rs
crates/transcriber/: Cargo.toml
crates/transcriber/src/: main.rs  transcriber.rs
docs/: anime-selector-shell-escaping-issue.md
scripts/: get_anime_candidates.sh  select_anime.py
